--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -5,12 +5,12 @@
     <span id="favorite_link" class = "favorite-link">
       <% if current_user.favorite?(micropost) %>
         <%= form_with(model: current_user.favorites.find_by(micropost_id: micropost.id),method: :delete, local: true) do |f| %>
-          <%= f.submit "お気に入り登録解除",class:"btn btn-warning" %>
+          <%= f.submit "Unfavorite",class:"btn btn-success" %>
         <% end %>
       <% else %>
         <%= form_with(model:current_user.favorites.build, local: true) do |f| %>
           <div><%= hidden_field_tag :micropost_id, micropost.id %></div>
-          <%= f.submit "お気に入り登録" ,class:"btn btn-outline-warning"%>
+          <%= f.submit "Favorite" ,class:"btn btn-outline-success"%>
         <% end %>
       <% end %>
     </span>
